<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优侃说英语</string>
    <string name="login_input_mobile">手机号码</string>
    <string name="login_input_password">密码</string>
    <string name="register_input_moblie">11位手机号码</string>
    <string name="register_input_password">8-16位数字和字母</string>
    <string name="register_input_password_ag">再输一遍</string>
    <string name="register_input_verifycode">验证码</string>
    <string name="basic_info_from">我来自</string>
    <string name="basic_info_nickname">我叫</string>
    <string name="basic_info_male">男</string>
    <string name="basic_info_female">女</string>
    <string name="sex_tips">选定之后不能再修改</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="media_ejected">储存卡已拔出，语音功能将暂时不可用</string>
    <string name="app_crash_tips">系统错误</string>
    <string name="dialog_title_alert">提示</string>
    <string name="dialog_btn">确定</string>
    <string name="dialog_btn_confim">确认</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="loading">正在加载...</string>
    <string name="loading_press">请稍候，正在提交...</string>
    <string name="contentDescription">menu</string>
    <string name="copyright">©Copyright 北京优侃互动科技有限公司</string>
    <string name="login_singin">登陆</string>
    <string name="split">-or-</string>
    <string name="login_register">注册</string>
    <string name="register_license">《优侃用户协议》</string>
    <string name="register_license_tip">注册即表示同意</string>
    <string name="register_set_account">设置账号</string>
    <string name="register_set_password">设置密码</string>
    <string name="register_set_basic_info">设置基本信息</string>
    <string name="back">返回</string>
    <string name="next_btn">下一步</string>
    <string name="notification_fmt_one_txttype">%s发来1条消息</string>
    <string name="notification_fmt_one_imgtype">%s发来1张图片</string>
    <string name="notification_fmt_one_voicetype">%s发来1段语音</string>
    <string name="notification_fmt_one_filetype">%s发来1个文件</string>
    <string name="str_system_message_group_notice">群组通知</string>
    <string name="app_pic">[图片]</string>
    <string name="app_music">[音乐]</string>
    <string name="app_voice">[语音]</string>
    <string name="app_video">[视频]</string>
    <string name="app_file">[文件]</string>
    <string name="ec_voip_is_talking_tip">正在通话中, 轻击以继续</string>
    <string name="invite_wating_replay">邀请成功，等待对方确认</string>
    <string name="dialog_cancle_btn">取消</string>
    <string name="SDK_INIT_FAILED">请先初始化sdk</string>
    <string name="voip_not_wifi_warnning_title">提示</string>
    <string name="voip_not_wifi_warnning_message">在移动网络环境下会影响视频和音频质量，并产生手机流量。</string>
    <string name="load_failed_network">当前网络不可用,请检查你的网络设置。</string>
    <string name="login_posting_submit">正在提交，请稍候</string>
    <string name="login_posting">正在登录，请稍候</string>
    <string name="register_posting">正在注册，请稍后</string>
    <string name="bottom_btn_chatroom">语伴</string>
    <string name="bottom_btn_find">发现</string>
    <string name="top_btn_corner">语伴</string>
    <string name="top_btn_forone">一对一</string>
    <string name="bottom_btn_group">圈子</string>
    <string name="bottom_btn_setting">我的</string>
    <string name="main_plus_chat">发起会话/群聊</string>
    <string name="main_plus_groupchat">创建群组</string>
    <string name="main_plus_querygroup">查找群组</string>
    <string name="main_plus_mcmessage">在线客服</string>
    <string name="main_plus_inter_phone">实时对讲</string>
    <string name="main_plus_meeting_voice">创建语音房间</string>
    <string name="main_plus_settings">设置</string>
    <string name="main_plus_meeting_video">创建视频房间</string>
    <string name="main_plus_search">搜索房间</string>
    <string name="create_discussion">创建讨论组</string>
    <string name="query_discussion">获取讨论组</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_update">更新</string>
    <string name="app_cancel">取消</string>
    <string name="new_update_version">发现新版本</string>
    <string name="update_next">下次更新</string>
    <string name="settings_logout">退出</string>
    <string name="app_tip">提示</string>
    <string name="ec_empty_inter_phone">暂无房间</string>
    <string name="str_chatroom_list_join_number" formatted="false">%1$s/%2$s</string>
    <string name="http_error_1">无法连接服务器</string>
    <string name="http_error_2">获取数据失败，请稍后再试</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="slide_up">Slide up</string>
    <string name="slide">Slide</string>
    <string name="slide_down">Slide down</string>
    <string name="random_color">Random color</string>
    <string name="use_blur">Use blur</string>
    <string name="items_clickables">Items clickables</string>
    <string name="auto_dismiss">Auto dismiss</string>
    <string name="blur_radius">Blur Radius</string>
    <string name="blur_downscale">Blur Downscale</string>

</resources>