<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <com.ucan.app.common.view.CircularImage
            android:id="@+id/cover_user_photo"
            android:layout_width="120.0dip"
            android:layout_height="120.0dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:divider="@drawable/spacer_medium"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:showDividers="middle" >

        <com.ucan.app.common.view.DefineInputView
            android:id="@+id/login_mobile"
            style="@style/FormInputView"
            android:drawableLeft="@drawable/mobile"
            android:drawableStart="@drawable/mobile"
            android:hint="@string/login_input_mobile"
            android:inputType="phone" />

        <com.ucan.app.common.view.DefineInputView
            android:id="@+id/login_password"
            style="@style/FormInputView"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="@string/login_input_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_signin"
            style="@style/FormButtonView"
            android:enabled="false"
            android:text="@string/login_singin" >
        </Button>

        <TextView
            android:layout_width="@dimen/LoginInputWidth"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/split"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_signup"
            style="@style/FormButtonView"
            android:text="@string/login_register" >
        </Button>
    </LinearLayout>

</LinearLayout>