<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_content_height"
        android:background="@color/default_color"
        android:padding="2.0dip" >

        <LinearLayout
            android:id="@+id/actionBar_menu_container_left"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="20dip"
            android:paddingRight="20dip" >

            <ImageView
                android:id="@+id/btn_unread"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:contentDescription="@string/contentDescription"
                android:scaleType="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionBar_back_ll"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal" >

            <Button
                android:id="@+id/top_btn_chatroom_left"
                style="@style/TopBarButton"
                android:background="@drawable/top_bar_button_bg_selector_left"
                android:text="@string/top_btn_corner"
                android:textColor="@color/top_bar_botton_text_color" />

            <Button
                android:id="@+id/top_btn_chatroom_right"
                style="@style/TopBarButton"
                android:background="@drawable/top_bar_button_bg_selector_right"
                android:text="@string/top_btn_forone"
                android:textColor="@color/top_bar_botton_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actionBar_menu_container_right"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/btn_menu"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:contentDescription="@string/contentDescription"
                android:scaleType="center"
                android:src="@drawable/icon_topbar_menu" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_bar" >
    </RelativeLayout>

</RelativeLayout>