<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_border"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/btn_container_chatroom_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/tab_btn_chatroom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_item_bg"
                android:drawablePadding="-2dip"
                android:drawableTop="@drawable/tab_chatroom_bg"
                android:onClick="onTabBtnClick"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/bottom_btn_chatroom"
                android:textColor="@color/botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_activity_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/tab_btn_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_item_bg"
                android:drawablePadding="-2dip"
                android:drawableTop="@drawable/tab_practise_bg"
                android:onClick="onTabBtnClick"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/bottom_btn_practise"
                android:textColor="@color/botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_group_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/tab_btn_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_item_bg"
                android:drawablePadding="-2dip"
                android:drawableTop="@drawable/tab_group_bg"
                android:onClick="onTabBtnClick"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/bottom_btn_group"
                android:textColor="@color/botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_container_setting_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/tab_btn_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bottom_item_bg"
                android:drawablePadding="-2dip"
                android:drawableTop="@drawable/tab_setting_bg"
                android:onClick="onTabBtnClick"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/bottom_btn_setting"
                android:textColor="@color/botton_text_color"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tab_bar" >
    </RelativeLayout>

</RelativeLayout>